# cuda-hamming-one

./: .gitignore  CMakeLists.txt  README.md  generate.bat
hamming/: hamming.cu  main.cpp
